# Project2

./: AddAutomaton.cpp  Automaton.h  BlockCommentAutomaton.cpp  BlockCommentAutomaton.h  CMakeLists.txt  DatalogProgram.cpp  DatalogProgram.h  FactsAutomaton.h  IDAutomaton.cpp  IDAutomaton.h  LPAutomaton.cpp  LPAutomaton.h  Lexer.cpp  Lexer.h  LineCommentAutomaton.cpp  LineCommentAutomaton.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  Predicate.cpp  Predicate.h  QAutomaton.cpp  QAutomaton.h  QueriesAutomaton.h  RPAutomaton.cpp  RPAutomaton.h  Rule.cpp  Rule.h  RulesAutomaton.h  SchemesAutomaton.h  StringAutomaton.cpp  StringAutomaton.h  Token.cpp  Token.h  UntermBlockCommentAutomaton.cpp  UntermBlockCommentAutomaton.h  UntermStringAutomaton.cpp  UntermStringAutomaton.h  main.cpp
